scss/_lists.scss
@use 'var';

ul li::marker,
ol li::marker {
	font-weight: var(--font-regular);
	font-size: var.$font-scale-0;
	color: var(--text-normal);
	font-family: var(--font-sans); // not font-preview, because otherwise it will change
	font-variant-numeric: tabular-nums;
}

li::marker {
	color: inherit;
	-webkit-font-smoothing: auto;
}

.markdown-preview-view {
	& ol li p {
		margin: 0;
	}
	& ol li,
	& ul li {
		line-height: var.$leading-4; //adds white space to lists, and makes it match task lists
		margin: 4px 0;
	}
	
	& .list-collapse-indicator { // generic ul and task list
		margin-left: -3rem;
		color: var(--text-faint);
	}
	& ol li .list-collapse-indicator { // ol under 10
		margin-left: -3rem;
	}
	& ol li:nth-child(n+10) ol ol li:nth-child(n+10) .list-collapse-indicator, // ol over 10
	& ol li:nth-child(n+10) .list-collapse-indicator {
		margin-left: -3rem;
	}
	& ol li:nth-child(n+10) ol .list-collapse-indicator {
		margin-left: -3rem;
	}
	.relationship-lines & ul .list-collapse-indicator,
	.relationship-lines & ol .list-collapse-indicator { // generic ul and task list
		margin-left: -2.5em;
		color: var(--text-faint);
	}
}

/* ────────────────────────────── Ordered List ────────────────────────────── */

ol,
ol ol ol,
ol ol ol ol ol,
ol ol ol ol ol ol ol {
	margin-left: var.$size-0;
	list-style-type: decimal;
}

ol ol,
ol ol ol ol,
ol ol ol ol ol ol,
ol ol ol ol ol ol ol ol {
	margin-left: var.$size-0;
	list-style-type: lower-alpha;
}

/* ───────────────────────────── Unordered List ───────────────────────────── */
ul {
	padding-inline-start: 1.5rem;
	list-style-position: outside;
}

ul,
ul ul ul,
ul ul ul ul ul,
ul ul ul ul ul ul ul,
ol ul, // making sure that even if you indent an ul inside an ol, it will display the correct list-style-type
ul ol ul,
ol ol ul,
ol ul ol ul,
ol ul ul ul,
ul ol ul ul ul {
	list-style-type: '–  ';
	margin: var.$size-0;
	padding: var.$size-0;
	padding-left: 1.5rem;
}

ul ul,
ul ul ul ul,
ul ul ul ul ul ul,
ul ul ul ul ul ul ul ul,
ol ul ul,
ol ol ul ul,
ul ol ul ul,
ol ul ol ul ul,
ul ol ol ul ul {
	list-style-type: '▪  '; // don't set it as square, because it will misalign
	padding: var.$size-0;
	padding-left: 1.5rem;
}
/*
ul,
ul ul ul,
ul ul ul ul ul,
ul ul ul ul ul ul ul,
ol ul, // making sure that even if you indent an ul inside an ol, it will display the correct list-style-type
ul ol ul,
ol ol ul,
ol ul ol ul,
ol ul ul ul,
ul ol ul ul ul {
	list-style-type: disc;
}

ul ul,
ul ul ul ul,
ul ul ul ul ul ul,
ul ul ul ul ul ul ul ul,
ol ul ul,
ol ol ul ul,
ul ol ul ul,
ol ul ol ul ul,
ul ol ol ul ul {
	list-style-type: circle;
}*/

ol {
	padding-inline-start: 1.5em;
	list-style-position: outside;
}

li {
	margin-bottom: 4px; // adds a bit more spacing to lists
}

.cm-s-obsidian .HyperMD-list-line {
	padding-top: 0; // avoids weird disalignment with line numbers
}

/* ─────────────────────────── Relationship Lines ─────────────────────────── */
/*
.relationship-lines li:not(.task-list-item):not(.footnotes li) {
	padding-left: .2rem;
	border-left: 1.5px solid var(--color-primary-2);
}

.relationship-lines-alternating {
	& li:not(.task-list-item):not(.footnotes li) {
		padding-left: .2rem;
		border-left: 1.5px solid var(--color-primary-2);
	}

	& li:nth-child(even):not(.task-list-item):not(.footnotes li) {
		padding-left: .2rem;
		border-left: 1.5px solid var(--color-primary-4);
	}
}*/

/* ────────────────────────── New Relationship Lines ───────────────────────── */
/*
.relationship-lines ul {
	list-style-type: none;
}

ul li {
	position: relative;
	margin-bottom: 0;
}

.relationship-lines ul > li:before {
	content: "";
}

// level 2
.relationship-lines ul > li > ul > li::before {
	position: absolute;
	display: block;
	content: "";
	height: 100%;
	width: 1px;
	top: 1px;
	left: -24px;
	background-color: var(--text-faint);
}

.relationship-lines ul > li > ul > li::after {
	position: absolute;
	display: block;
	content: "";
	height: 1px;
	width: 12px;
	top: 12px;
	left: -24px;
	background-color: var(--text-faint);
}

.relationship-lines ul > li > ul > li:last-child:before {
	position: absolute;
	display: block;
	content: "";
	height: 15px;
	width: 1px;
	top: -3px;
	left: -24px;
	background-color: var(--text-faint);
}

.relationship-lines ul > li > ul > li:last-child:after {
	position: absolute;
	display: block;
	content: "";
	height: 1px;
	width: 12px;
	top: 12px;
	left: -24px;
	background-color: var(--text-faint);
}*/

/* Relationship lines in Reading View */

.relationship-lines {

	& ul > li,
	& ol > li {
	position: relative;
	}
	& ol,
	& ul {
		position: relative;
	}
	& .markdown-preview-view ul ul,
	& .markdown-preview-view ol ol {
		position: relative;
	}
	& ul > li::before,
	& ol > li::before {
		position: absolute;
		content: "";
		border-left: 1px solid var(--text-faint);
		opacity: .7;
		height: calc(100% - 2em);
		margin-left: -1.65em;
		top: 1.5em;
	}
	& :not(.admonitions) ul > li.task-list-item.is-checked::before,
	& :not(.admonitions) ol > li.task-list-item.is-checked::before {
		left: .9em;
	}
	& .admonitions ul > li.task-list-item.is-checked::before,
	& .admonitions ol > li.task-list-item.is-checked::before {
		left: 9px;
	}
	& ul ul::before,
	& ol ol::before {
		content: "";
		position: absolute;
	}
	& .markdown-preview-view ol ol::before {
		margin-left: -0.8em;
	}
}

:root {
	--rel-line-width: 3.05ch;
}

/* Relationship Lines in Editing View */
.relationship-lines {
	& .mod-cm6.is-live-preview .HyperMD-list-line.cm-line {
		overflow: hidden;
	}
	& .mod-cm6.is-live-preview .HyperMD-list-line.cm-line .cm-hmd-list-indent {
		position: relative;
	/*	font-family: var(--font-editor);
		font-size: var(--editor-font-size);*/
	}
	& .mod-cm6.is-live-preview .HyperMD-list-line.cm-line .cm-hmd-list-indent::before {
		content: '';
	/*	font-family: var(--font-editor);
		font-size: var(--editor-font-size);*/
		display: block;
		position: absolute;
		width: 100%;
		top: -1.6em;
		padding-bottom: 999em;
		background-image: linear-gradient( to right, var(--text-faint) 1px, transparent 1px);
		background-size: var(--rel-line-width) 1px;
		left: 3px;
		opacity: .7;
	}
}
/* ──────────────────────────────── Outliner ──────────────────────────────── */

// Some Outliner Edit Mode Corrections 
.outliner-plugin-bls .cm-s-obsidian span span.cm-formatting-list-ul:before {
	margin-top: 0px;
}
.outliner-plugin-bls .cm-s-obsidian span.cm-formatting-list{
	letter-spacing: 0px;
}

body.outliner-plugin-bls .cm-line .cm-hmd-list-indent::before {
	content: "";
	display: block;
	position: absolute;
	background-image: linear-gradient( to right, var(--text-faint) 1px, transparent 1px );
	background-size: 2.9ch 1px;
	background-position-x: 3px;
	width: 100%;
	left: 0;
	top: -1.6em;
	padding-bottom: 999em;
}

body.outliner-plugin-bls .cm-s-obsidian:not(.is-live-preview) .cm-formatting-list-ul:before,
body.outliner-plugin-bls .cm-s-obsidian.is-live-preview .list-bullet:before {
	content: "–  ";
	font-size: 100%;
	position: absolute;
	margin-top: -1px;
	margin-left: -4px;
	color: var(--text-muted);
}

// Live Preview bullet points
.list-bullet { color: transparent; }
.list-bullet::before { color:var(--text-normal); margin-right: -12px; }
.HyperMD-list-line-1 .list-bullet::before { content: "–  "; }
.HyperMD-list-line-2 .list-bullet::before { content: "▪  "; }
.HyperMD-list-line-3 .list-bullet::before { content: "–  "; }
.HyperMD-list-line-4 .list-bullet::before { content: "▪  "; }
.HyperMD-list-line-5 .list-bullet::before { content: "–  "; }
.HyperMD-list-line-6 .list-bullet::before { content: "▪  "; }
.HyperMD-list-line-7 .list-bullet::before { content: "–  "; }
.HyperMD-list-line-8 .list-bullet::before { content: "▪  "; }
.HyperMD-list-line-8 .list-bullet::before { content: "–  "; }
.HyperMD-list-line-8 .list-bullet::before { content: "▪  "; }

.list-bullet,
.list-bullet::before,
.HyperMD-list-line-1 .list-bullet::before,
.HyperMD-list-line-2 .list-bullet::before,
.HyperMD-list-line-3 .list-bullet::before,
.HyperMD-list-line-4 .list-bullet::before,
.HyperMD-list-line-5 .list-bullet::before,
.HyperMD-list-line-6 .list-bullet::before,
.HyperMD-list-line-7 .list-bullet::before,
.HyperMD-list-line-8 .list-bullet::before,
.HyperMD-list-line-8 .list-bullet::before,
.HyperMD-list-line-8 .list-bullet::before {
	font-family: var(--font-sans);
}

